--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "homepage": "https://github.com/SDE2025-DomoticWebApp/InternalDataAdapter#readme",
   "dependencies": {
     "better-sqlite3": "^12.5.0",
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "bcryptjs": "^3.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
