--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   "dependencies": {
     "better-sqlite3": "^12.5.0",
     "express": "^5.2.1",
+    "axios": "^1.13.2",
+    "dotenv": "^17.2.3",
     "bcryptjs": "^3.0.3"
   },
   "devDependencies": {
